--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Brafé</title>
   </head>
   <body>
-    <header>
-      <div>
-        <a href="#"><img src="img/brafe.png" alt="Brafé" /></a>
+    <header class="menu">
+      <div class="menu-container">
+        <a class="menu-logo" href="#"
+          ><img src="img/brafe.png" alt="Brafé"
+        /></a>
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Produtos</a></li>
+            <li><a href="#">Portfólio</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
-      </nav>
     </header>
 
     <main>
@@ -136,7 +138,7 @@
           Este é um projeto da Origamid. Mais em origamid.com<br />Praia de
           Botafogo, 300, 5º andar - Botafogo - Rio de Janeiro
         </p>
-        <img src="img/brafe.png" alt="Brafé">
+        <img src="img/brafe.png" alt="Brafé" />
       </div>
     </footer>
   </body>
