--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       <a class="produtos-btn" href="#">Saiba Mais</a>
     </section>
 
-    <section>
-      <div>
+    <section class="locais">
+      <div class="locais-item">
         <img src="img/botafogo.jpg" alt="Brafé unidade Botafogo" />
         <div>
           <h2>Botafogo</h2>
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="locais-item">
         <img src="img/iguatemi.jpg" alt="Brafé unidade Iguatemi" />
         <div>
           <h2>Iguatemi</h2>
@@ -104,7 +104,7 @@
         </div>
       </div>
 
-      <div>
+      <div class="locais-item">
         <img src="img/mineirao.jpg" alt="Brafé unidade Mineirão" />
         <div>
           <h2>Mineirão</h2>
